--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <title>F1</title>
   </head>
   <body style="background-image: url(https://i.imgur.com/lD6lec0.png); background-size: cover; background-repeat: no-repeat;">
