--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     />
     <title>F1</title>
   </head>
-  <body style="background-image: url(https://i.imgur.com/lD6lec0.png); background-size: cover; background-repeat: no-repeat;">
+  <body style="background-image: url(https://i.imgur.com/Qnmt6vu.png); background-size: cover; background-repeat: no-repeat;">
     <div id="root"></div>
   </body>
 </html>
